imp: 优化启动项